Bug 463451 - cannot run as root
Summary: cannot run as root
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL: https://bugs.chromium.org/p/chromium/...
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-25 08:38 UTC by Christopher Yeleighton
Modified: 2023-02-20 16:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Yeleighton 2022-12-25 08:38:52 UTC
SUMMARY
Konqueror refuses to run as root.


STEPS TO REPRODUCE
1. konqueror --no-sandbox


OBSERVED RESULT
konqueror: Unknown option 'no-sandbox'.

EXPECTED RESULT
Konqueror

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: openSUSE Tumbleweed 20221222
(available in About System)
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
I guess another case of the ‘shared library calls exit‘ cancer.  Konqueror, when run as root, should not load WebKit at all.
Comment 1 Bug Janitor Service 2022-12-25 17:26:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/156
Comment 2 Stefano Crocco 2023-02-20 16:18:53 UTC
Git commit 73c3d190c90d27bb029ab2d1d32445bca7268690 by Stefano Crocco.
Committed on 20/02/2023 at 16:18.
Pushed by stefanocrocco into branch 'master'.

Allow to run Konqueror as root

Because this requires enabling a potentially dangerous switch in QtWebEngine, the user is asked for confirmation; also, it doesn't attempt to connect to DBus to avoid problems and security risks.

M  +43   -9    src/konqapplication.cpp
M  +17   -0    src/konqapplication.h

https://invent.kde.org/network/konqueror/commit/73c3d190c90d27bb029ab2d1d32445bca7268690