Allow to run Konqueror as root

Because this requires enabling a potentially dangerous switch in QtWebEngine, the user is asked for confirmation; also, it doesn't attempt to connect to DBus to avoid problems and security risks.

BUG: 463451